Initial upload of site

--- a/about.html
+++ b/about.html
@@ -21,11 +21,23 @@
   </header>
 
   <main>
-    <section>
-      <h2>Welcome to Origins Rebirth!</h2>
-      <p>This is a custom Minecraft Origins server that supports Java and Bedrock players. Explore unique plugins, choose your origin, and join a thriving cross-platform community.</p>
-    </section>
-  </main>
+    <h2>About Origins Rebirth</h2>
+    <p>Origins Rebirth is a community-driven Minecraft server built upon the popular Origins mod, reimagined for multiplayer with custom mechanics and unique server-side plugins.</p>
+
+    <h3>History</h3>
+    <p>Originally launched as "Origins Reborn," the server was relaunched under new management with a focus on quality, transparency, and community involvement.</p>
+
+    <h3>Our Features</h3>
+    <ul>
+        <li>⚙️ Custom-coded plugins for expanded Origin abilities</li>
+        <li>📡 24/7 hosted with 99.9% uptime</li>
+        <li>📌 Active Discord with community polls and support</li>
+    </ul>
+
+    <h3>Team</h3>
+    <p>Led by dedicated Minecraft developers and moderators who love the Origins concept and want to bring the best experience possible to players of all platforms.</p>
+    </main>
+
 
   <footer>
     <p>&copy; 2025 Origins Rebirth. All rights reserved.</p>
