--- a/index.html
+++ b/index.html
@@ -22,8 +22,23 @@
 
   <main>
     <section>
-      <h2>Welcome to Origins Rebirth!</h2>
-      <p>This is a custom Minecraft Origins server that supports Java and Bedrock players. Explore unique plugins, choose your origin, and join a thriving cross-platform community.</p>
+        <h2>Welcome to Origins Rebirth</h2>
+        <p>Experience a custom Origins Minecraft server like no other – powered by unique plugins, a cross-platform player base (Java + Bedrock), and regular content updates.</p>
+    </section>
+
+    <section>
+        <h3>What Makes Us Different?</h3>
+        <ul>
+            <li>🔮 Fully custom Origins</li>
+            <li>🧩 Handcrafted plugins & features</li>
+            <li>🌍 Cross-platform: Java + Bedrock compatible</li>
+            <li>🛡️ Fair rules & active moderation</li>
+        </ul>
+    </section>
+
+    <section>
+        <h3>Start Your Adventure</h3>
+        <p><a href="contact.html">Join Now →</a></p>
     </section>
   </main>
 
