Initial added code of site

--- a/index.html
+++ b/index.html
@@ -7,38 +7,56 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header>
-    <h1>Origins Rebirth</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="origins.html">Origins</a></li>
-        <li><a href="rules.html">Rules</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Origins Rebirth</h1>
+      <p>Your custom cross-platform Minecraft Origins experience</p>
+      <a href="contact.html" class="btn-primary">Join Now</a>
+    </div>
   </header>
 
-  <main>
-    <section>
-        <h2>Welcome to Origins Rebirth</h2>
-        <p>Experience a custom Origins Minecraft server like no other – powered by unique plugins, a cross-platform player base (Java + Bedrock), and regular content updates.</p>
+  <nav class="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="origins.html">Origins</a></li>
+      <li><a href="rules.html">Rules</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Join</a></li>
+    </ul>
+  </nav>
+
+  <main class="container">
+    <section class="intro">
+      <h2>Welcome to Origins Rebirth</h2>
+      <p>Explore a vibrant Minecraft server powered by custom Origins and plugins. Our server supports both Java and Bedrock editions, offering a seamless cross-platform experience.</p>
     </section>
 
-    <section>
-        <h3>What Makes Us Different?</h3>
-        <ul>
-            <li>🔮 Fully custom Origins</li>
-            <li>🧩 Handcrafted plugins & features</li>
-            <li>🌍 Cross-platform: Java + Bedrock compatible</li>
-            <li>🛡️ Fair rules & active moderation</li>
-        </ul>
+    <section class="features">
+      <h3>🌟 Server Highlights</h3>
+      <div class="grid">
+        <div class="card">
+          <h4>🔮 Custom Origins</h4>
+          <p>Choose from exclusive Origins designed specifically for this server with unique traits and powers.</p>
+        </div>
+        <div class="card">
+          <h4>🧩 Unique Plugins</h4>
+          <p>Enjoy enhanced gameplay with our one-of-a-kind plugin system built on PaperMC.</p>
+        </div>
+        <div class="card">
+          <h4>🌐 Cross-Platform</h4>
+          <p>Play on Java or Bedrock — no limitations, just fun.</p>
+        </div>
+        <div class="card">
+          <h4>🛡️ Friendly Community</h4>
+          <p>Join a moderated and inclusive community on our Discord and in-game world.</p>
+        </div>
+      </div>
     </section>
 
-    <section>
-        <h3>Start Your Adventure</h3>
-        <p><a href="contact.html">Join Now →</a></p>
+    <section class="cta">
+      <h3>Ready to Begin?</h3>
+      <p>Start your Origins journey now. Pick your powers, shape your path, and make your mark!</p>
+      <a href="contact.html" class="btn-primary">Get Started</a>
     </section>
   </main>
 
