Initial added code of site

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   </nav>
 
   <main class="container">
-    <section class="intro">
+    <section class="glass-box intro">
       <h2>Welcome to Origins Rebirth</h2>
       <p>Explore a vibrant Minecraft server powered by custom Origins and plugins. Our server supports both Java and Bedrock editions, offering a seamless cross-platform experience.</p>
     </section>
 
-    <section class="features">
+    <section class="glass-box features">
       <h3>🌟 Server Highlights</h3>
       <div class="grid">
         <div class="card">
@@ -53,7 +53,7 @@
       </div>
     </section>
 
-    <section class="cta">
+    <section class="glass-box cta">
       <h3>Ready to Begin?</h3>
       <p>Start your Origins journey now. Pick your powers, shape your path, and make your mark!</p>
       <a href="contact.html" class="btn-primary">Get Started</a>
