Initial added code of site

--- a/index.html
+++ b/index.html
@@ -7,23 +7,18 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header class="hero">
-    <div class="hero-content">
-      <h1>Origins Rebirth</h1>
-      <p>Your custom cross-platform Minecraft Origins experience</p>
-      <a href="contact.html" class="btn-primary">Join Now</a>
-    </div>
+  <header>
+    <h1>Origins Rebirth</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="origins.html">Origins</a></li>
+        <li><a href="rules.html">Rules</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </header>
-
-  <nav class="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="origins.html">Origins</a></li>
-      <li><a href="rules.html">Rules</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Join</a></li>
-    </ul>
-  </nav>
 
   <main class="container">
     <section class="glass-box intro">
