Initial added code of site

--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header>
+  <!-- ✦ HEADER -->
+  <header class="site-header">
+    <div class="logo-container">
+      <a href="/">
+         <img src="assets/img/logo.png" alt="Airenath Xanarica Logo" class="site-logo" />
+      </a>
+    </div>
     <h1>Origins Rebirth</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="origins.html">Origins</a></li>
-        <li><a href="rules.html">Rules</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+    <nav class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="origins.html">Origins</a>
+      <a href="rules.html">Rules</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
