Initial added code of site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="site-header">
     <div class="logo-container">
       <a href="/">
-         <img src="assets/img/logo.png" alt="Airenath Xanarica Logo" class="site-logo" />
+         <img src="assets/img/logo.png" alt="Logo" class="site-logo" />
       </a>
     </div>
     <h1>Origins Rebirth</h1>
