--- a/index.html
+++ b/index.html
@@ -2,28 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Origins Rebirth</title>
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" href="assets/logo.png" type="image/png" />
 </head>
 <body>
   <!-- ✦ HEADER -->
   <header class="site-header">
     <div class="logo-container">
-      <a href="/">
-         <img src="assets/img/logo.png" alt="Logo" class="site-logo" />
+      <a href="index.html" aria-label="Home">
+        <img src="assets/logo.png" alt="Origins Rebirth Logo" class="site-logo" />
       </a>
     </div>
-    <h1>Origins Rebirth</h1>
-    <nav class="nav-links">
+    <h1 class="site-title">Origins Rebirth</h1>
+    <nav class="nav-links" aria-label="Main Navigation">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="origins.html">Origins</a>
       <a href="rules.html">Rules</a>
-      <a href="contact.html">Contact</a>
+      <a href="contact.html">Join</a>
     </nav>
   </header>
 
+  <!-- ✦ MAIN CONTENT -->
   <main class="container">
     <section class="glass-box intro">
       <h2>Welcome to Origins Rebirth</h2>
@@ -59,6 +61,7 @@
     </section>
   </main>
 
+  <!-- ✦ FOOTER -->
   <footer>
     <p>&copy; 2025 Origins Rebirth. All rights reserved.</p>
   </footer>
