Initial added code of site

--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
   <link rel="icon" href="assets/logo.png" type="image/png" />
 </head>
 <body>
-  <!-- ✦ HEADER -->
+  <script src="js/script.js"></script>
+  <!-- ✦ BACKGROUND SLIDER -->
+  <div class="background-carousel">
+    <div class="slide active" style="background-image: url('assets/bg1.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg2.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg3.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg4.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg5.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg6.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg7.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg8.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg9.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg10.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg11.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg12.jpg');"></div>  
+    <div class="slide" style="background-image: url('assets/bg13.jpg');"></div>      
+  </div>
+
+  <!-- ✦ PAGE CONTENT BELOW -->
   <header class="site-header">
     <div class="logo-container">
       <a href="index.html" aria-label="Home">
