--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <h1 class="site-title">Origins Rebirth</h1>
     <nav class="nav-links" aria-label="Main Navigation">
-      <a href="index.html">Home</a>
+      <a href="index.html" class="active">Home</a>
       <a href="about.html">About</a>
       <a href="origins.html">Origins</a>
       <a href="rules.html">Rules</a>
