--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Origins Rebirth</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="icon" href="assets/logo.png" type="image/png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
   <!-- ✦ BACKGROUND SLIDER -->
@@ -79,8 +81,33 @@
   </main>
 
   <!-- ✦ FOOTER -->
-  <footer>
+  <footer class="site-footer">
+  <div class="footer-container">
+    <div class="footer-column">
+      <h4>About</h4>
+      <p>Origins Rebirth is a custom Minecraft server blending the best of Java and Bedrock gameplay with powerful Origins and plugins.</p>
+    </div>
+    <div class="footer-column">
+      <h4>Quick Links</h4>
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a href="origins.html">Origins</a></li>
+        <li><a href="rules.html">Rules</a></li>
+        <li><a href="contact.html">Join</a></li>
+      </ul>
+    </div>
+    <div class="footer-column">
+      <h4>Connect</h4>
+      <ul class="social-links">
+        <li><a href="#"><i class="fab fa-discord"></i> Discord</a></li>
+        <li><a href="#"><i class="fab fa-youtube"></i> YouTube</a></li>
+        <li><a href="#"><i class="fab fa-tiktok"></i> TikTok</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="footer-bottom">
     <p>&copy; 2025 Origins Rebirth. All rights reserved.</p>
+  </div>
   </footer>
   <script src="js/script.js"></script>
 </body>
