Initial added code of site

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="slide" style="background-image: url('assets/bg12.jpg');"></div>  
     <div class="slide" style="background-image: url('assets/bg13.jpg');"></div>      
   </div>
-
+  <div class="background-overlay"></div>
   <!-- ✦ PAGE CONTENT BELOW -->
   <header class="site-header">
     <div class="logo-container">
