Initial added code of site

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 
   <!-- ✦ MAIN CONTENT -->
   <main class="container">
+    <section class="hero-divider">
+        <h2 class="placeholder-text">Your Epic Adventure Begins</h2>
+    </section>
+
     <section class="glass-box intro">
       <h2>Welcome to Origins Rebirth</h2>
       <p>Explore a vibrant Minecraft server powered by custom Origins and plugins. Our server supports both Java and Bedrock editions, offering a seamless cross-platform experience.</p>
