Initial added code of site

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
   <!-- ✦ MAIN CONTENT -->
   <main class="container">
-    <section class="hero-divider">
-        <h2 class="placeholder-text">Your Epic Adventure Begins</h2>
+    <section class="hero">
+        <h2>Your Epic Adventure Begins</h2>
     </section>
 
     <section class="glass-box intro">
