Initial added code of site

--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
     <h1 class="site-title">Origins Rebirth</h1>
     <nav class="nav-links" aria-label="Main Navigation">
       <a href="index.html" class="active">Home</a>
-      <a href="about.html">About</a>
-      <a href="origins.html">Origins</a>
+      <div class="dropdown">
+        <a href="about.html" class="dropbtn">About ▾</a>
+        <div class="dropdown-content">
+          <a href="wiki.html">Wiki</a>
+          <a href="origins.html">Origins</a>
+        </div>
+      </div>
       <a href="rules.html">Rules</a>
       <a href="contact.html">Join</a>
     </nav>
