Initial added code of site

--- a/map.html
+++ b/map.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Origins Rebirth</title>
+  <title>Origins Rebirth - Live Map</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="icon" href="assets/logo.png" type="image/png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 </head>
 <body>
   <!-- ✦ BACKGROUND SLIDER -->
@@ -45,43 +44,16 @@
   </header>
 
   <!-- ✦ MAIN CONTENT -->
-  <main class="container">
-    <section class="glass-box">
-      <h2>About the Server</h2>
-      <p><strong>Origins Rebirth</strong> is the next evolution of the beloved Origins Reborn server, officially announced as a continuation of Origins Reborn Season 2. As the original Towny data wasn’t available for restoration, this new server builds on the spirit of its predecessor while introducing fresh changes and preserving cherished elements.</p>
-    </section>
-
-    <section class="glass-box">
-      <h3>Leadership & Setup</h3>
-      <p>Server development and design is being led by <strong>Flyn</strong>, one of the server's administrators, under the direction of <strong>Intravenous</strong>. Intravenous joined the Origins community in February 2024 and quickly became one of the most active and successful players, known for running a large market, achieving the highest balance, and becoming the all-time top voter.</p>
-    </section>
-
-    <section class="glass-box">
-      <h3>Preserving the Past</h3>
-      <p>While the new season starts fresh, the original <strong>Origins Reborn worlds</strong> will remain preserved. Players will be able to explore them in spectator mode to revisit memories and landmarks. An <strong>archived online map</strong> is also planned to showcase these original worlds, complete with Towny regions intact for historical reference.</p>
-    </section>
-
-    <section class="glass-box">
-      <h3>New Features in Rebirth</h3>
-      <ul>
-        <li>🌍 New worlds with a 10k world border</li>
-        <li>🌋 Overworld and End feature custom world generation; Nether uses default Minecraft terrain</li>
-        <li>🏛️ The spawn area is reused from Origins Reborn, with updates and tweaks</li>
-        <li>📚 An online wiki is being developed to preserve and update documentation over time</li>
-      </ul>
-    </section>
-
-    <section class="glass-box">
-      <h3>Staff and Moderation</h3>
-      <p>The moderation structure for <strong>Origins Rebirth</strong> will be separate from the Kingdoms of Aeonis (KoA) server. This ensures both communities have dedicated support without overloading staff. However, builders, artists, developers, and administrators will continue to serve both communities.</p>
-      <p><strong>Rules remain consistent</strong> across both servers: both are family-friendly and maintain a strict zero-tolerance policy toward rule-breaking or boundary-pushing behavior.</p>
-    </section>
-
-    <section class="glass-box">
-      <h3>Coming Soon</h3>
-      <p>A temporary "Coming Soon" page is live while setup continues. More features and information will be released as development progresses — stay tuned!</p>
-    </section>
-  </main>
+    <main class="container">
+        <section class="glass-box">
+        <h2>Live Server Map</h2>
+        <p>Explore the live map of Origins Rebirth, showcasing player builds, towns, and more.</p>
+        </section>
+    
+        <section class="glass-box map-container">
+        <iframe src="https://map.originsrebirth.com/" title="Origins Rebirth Live Map" frameborder="0" allowfullscreen></iframe>
+        </section>
+    </main>
 
   <!-- ✦ FOOTER -->
   <footer class="site-footer">
