Initial added code of site

--- a/about.html
+++ b/about.html
@@ -36,9 +36,15 @@
     </div>
     <h1 class="site-title">Origins Rebirth</h1>
     <nav class="nav-links" aria-label="Main Navigation">
-      <a href="index.html">Home</a>
-      <a href="about.html" class="active">About</a>
-      <a href="origins.html">Origins</a>
+      <a href="index.html" class="active">Home</a>
+      <div class="dropdown">
+        <a href="about.html" class="dropbtn">About ▾</a>
+        <div class="dropdown-content">
+          <a href="wiki.html">Wiki</a>
+          <a href="origins.html">Origins</a>
+          <a href="map.html">Map</a>
+        </div>
+      </div>
       <a href="rules.html">Rules</a>
       <a href="contact.html">Join</a>
     </nav>
