--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <div class="dropdown-content">
           <a href="wiki.html">Wiki</a>
           <a href="origins.html">Origins</a>
+          <a href="map.html">Map</a>
         </div>
       </div>
       <a href="rules.html">Rules</a>
