Initial added code of site

--- a/map.html
+++ b/map.html
@@ -82,10 +82,11 @@
     </nav>
   </header>
 
+
   <!-- Fullscreen Map -->
-  <div class="map-fullscreen">
-    <iframe src="https://map.originsrebirth.com/" title="Origins Rebirth Live Map" allowfullscreen></iframe>
-  </div>
+  <main id="dynmap">
+        <iframe src="https://map.originsrebirth.com/" style="width:100%; height:500px; border:none;"></iframe>
+  </main>
 
   <!-- ✦ FOOTER -->
   <footer class="site-footer">
