Initial added code of site

--- a/map.html
+++ b/map.html
@@ -68,13 +68,13 @@
     </div>
     <h1 class="site-title">Origins Rebirth</h1>
     <nav class="nav-links" aria-label="Main Navigation">
-      <a href="index.html" class="active">Home</a>
+      <a href="index.html">Home</a>
       <div class="dropdown">
         <a href="about.html" class="dropbtn">About ▾</a>
         <div class="dropdown-content">
           <a href="wiki.html">Wiki</a>
           <a href="origins.html">Origins</a>
-          <a href="map.html">Map</a>
+          <a href="map.html" class="active">Map</a>
         </div>
       </div>
       <a href="rules.html">Rules</a>
@@ -85,7 +85,7 @@
 
   <!-- Fullscreen Map -->
   <main id="dynmap">
-        <iframe src="https://map.originsrebirth.com/" style="width:100%; height:500px; border:none;"></iframe>
+        <iframe src="https://map.originsrebirth.com/" style="width:100%; height:1000px; border:none;"></iframe>
   </main>
 
   <!-- ✦ FOOTER -->
