--- a/about.html
+++ b/about.html
@@ -36,9 +36,9 @@
     </div>
     <h1 class="site-title">Origins Rebirth</h1>
     <nav class="nav-links" aria-label="Main Navigation">
-      <a href="index.html" class="active">Home</a>
+      <a href="index.html">Home</a>
       <div class="dropdown">
-        <a href="about.html" class="dropbtn">About ▾</a>
+        <a href="about.html" class="dropbtn" class="active">About ▾</a>
         <div class="dropdown-content">
           <a href="wiki.html">Wiki</a>
           <a href="origins.html">Origins</a>
