--- a/about.html
+++ b/about.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Origins Rebirth</title>
+  <title>About - Origins Rebirth</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="icon" href="assets/logo.png" type="image/png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
   <!-- ✦ BACKGROUND SLIDER -->
@@ -23,9 +22,10 @@
     <div class="slide" style="background-image: url('assets/bg9.jpg');"></div>
     <div class="slide" style="background-image: url('assets/bg10.jpg');"></div>
     <div class="slide" style="background-image: url('assets/bg11.jpg');"></div>
-    <div class="slide" style="background-image: url('assets/bg12.jpg');"></div>  
-    <div class="slide" style="background-image: url('assets/bg13.jpg');"></div>      
+    <div class="slide" style="background-image: url('assets/bg12.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg13.jpg');"></div>
   </div>
+  <div class="background-overlay"></div>
 
   <!-- ✦ PAGE CONTENT BELOW -->
   <header class="site-header">
@@ -38,7 +38,7 @@
     <nav class="nav-links" aria-label="Main Navigation">
       <a href="index.html">Home</a>
       <div class="dropdown">
-        <a href="about.html" class="dropbtn" class="active">About ▾</a>
+        <a href="about.html" class="dropbtn active">About ▾</a>
         <div class="dropdown-content">
           <a href="wiki.html">Wiki</a>
           <a href="origins.html">Origins</a>
@@ -50,74 +50,63 @@
     </nav>
   </header>
 
+  <!-- ✦ HERO SECTION -->
+  <section class="hero">
+    <h2>Origins Rebirth — The Next Chapter</h2>
+  </section>
+
   <!-- ✦ MAIN CONTENT -->
   <main class="container">
-    <section class="glass-box">
-      <h2>About the Server</h2>
-      <p><strong>Origins Rebirth</strong> is the next evolution of the beloved Origins Reborn server, officially announced as a continuation of Origins Reborn Season 2. As the original Towny data wasn’t available for restoration, this new server builds on the spirit of its predecessor while introducing fresh changes and preserving cherished elements.</p>
-    </section>
-
-    <section class="glass-box">
-      <h3>Leadership & Setup</h3>
-      <p>Server development and design is being led by <strong>Flyn</strong>, one of the server's administrators, under the direction of <strong>Intravenous</strong>. Intravenous joined the Origins community in February 2024 and quickly became one of the most active and successful players, known for running a large market, achieving the highest balance, and becoming the all-time top voter.</p>
-    </section>
-
-    <section class="glass-box">
-      <h3>Preserving the Past</h3>
-      <p>While the new season starts fresh, the original <strong>Origins Reborn worlds</strong> will remain preserved. Players will be able to explore them in spectator mode to revisit memories and landmarks. An <strong>archived online map</strong> is also planned to showcase these original worlds, complete with Towny regions intact for historical reference.</p>
-    </section>
-
-    <section class="glass-box">
-      <h3>New Features in Rebirth</h3>
-      <ul>
-        <li>🌍 New worlds with a 10k world border</li>
-        <li>🌋 Overworld and End feature custom world generation; Nether uses default Minecraft terrain</li>
-        <li>🏛️ The spawn area is reused from Origins Reborn, with updates and tweaks</li>
-        <li>📚 An online wiki is being developed to preserve and update documentation over time</li>
-      </ul>
-    </section>
-
-    <section class="glass-box">
-      <h3>Staff and Moderation</h3>
-      <p>The moderation structure for <strong>Origins Rebirth</strong> will be separate from the Kingdoms of Aeonis (KoA) server. This ensures both communities have dedicated support without overloading staff. However, builders, artists, developers, and administrators will continue to serve both communities.</p>
-      <p><strong>Rules remain consistent</strong> across both servers: both are family-friendly and maintain a strict zero-tolerance policy toward rule-breaking or boundary-pushing behavior.</p>
-    </section>
-
-    <section class="glass-box">
-      <h3>Coming Soon</h3>
-      <p>A temporary "Coming Soon" page is live while setup continues. More features and information will be released as development progresses — stay tuned!</p>
+    <section class="glass-box intro">
+      <h2>About Origins Rebirth</h2>
+      <p>
+        Origins Rebirth is a continuation of the Origins Reborn server, officially named after a careful rebranding and reboot. The server is led by Flyn, an administrator tasked with setup, design, and development, under the guidance of Intravenous (also known as Intra), a veteran player with a record of achievements including managing the large market and holding the all-time top voter status.
+      </p>
+      <p>
+        Since Towny data from the original server has not been released, Origins Rebirth preserves the original Origins worlds, allowing players to explore them in spectator mode and enjoy nostalgia. Plans include providing an archived online map featuring Towny regions from these preserved worlds.
+      </p>
+      <p>
+        The server features new worlds with a world border set at 10,000 blocks, utilizing the same custom world generation as Origins Reborn for the overworld and the End, while the Nether uses Minecraft’s default generation.
+      </p>
+      <p>
+        The existing Origins spawn has been reused with some edits and tweaks due to time constraints, with plans to build a new spawn area in the future. Additionally, an online wiki is in development to preserve and update server information.
+      </p>
+      <p>
+        Moderator roles are divided between KoA and Origins servers to ensure full support without overwhelming any team, while administrators, builders, artists, and developers serve both servers. The server maintains a family-friendly environment with zero tolerance for rule breakers or boundary pushers.
+      </p>
     </section>
   </main>
 
   <!-- ✦ FOOTER -->
   <footer class="site-footer">
-  <div class="footer-container">
-    <div class="footer-column">
-      <h4>About</h4>
-      <p>Origins Rebirth is a custom Minecraft server blending the best of Java and Bedrock gameplay with powerful Origins and plugins.</p>
+    <div class="footer-container">
+      <div class="footer-column">
+        <h4>About</h4>
+        <p>Origins Rebirth is a custom Minecraft server blending the best of Java and Bedrock gameplay with powerful Origins and plugins.</p>
+      </div>
+      <div class="footer-column">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="about.html">About</a></li>
+          <li><a href="origins.html">Origins</a></li>
+          <li><a href="rules.html">Rules</a></li>
+          <li><a href="contact.html">Join</a></li>
+        </ul>
+      </div>
+      <div class="footer-column">
+        <h4>Connect</h4>
+        <ul class="social-links">
+          <li><a href="#"><i class="fab fa-discord"></i> Discord</a></li>
+          <li><a href="#"><i class="fab fa-youtube"></i> YouTube</a></li>
+          <li><a href="#"><i class="fab fa-tiktok"></i> TikTok</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="footer-column">
-      <h4>Quick Links</h4>
-      <ul>
-        <li><a href="about.html">About</a></li>
-        <li><a href="origins.html">Origins</a></li>
-        <li><a href="rules.html">Rules</a></li>
-        <li><a href="contact.html">Join</a></li>
-      </ul>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Origins Rebirth. All rights reserved.</p>
     </div>
-    <div class="footer-column">
-      <h4>Connect</h4>
-      <ul class="social-links">
-        <li><a href="#"><i class="fab fa-discord"></i> Discord</a></li>
-        <li><a href="#"><i class="fab fa-youtube"></i> YouTube</a></li>
-        <li><a href="#"><i class="fab fa-tiktok"></i> TikTok</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="footer-bottom">
-    <p>&copy; 2025 Origins Rebirth. All rights reserved.</p>
-  </div>
   </footer>
+
   <script src="js/script.js"></script>
 </body>
 </html>
